# Files-Sort-py

./: .gitignore  LICENSE  README.md  files-sort-old.py  files-sort.py  fsort-gui-beta.py  pyproject.toml  testing-file_creator.bat  testing-files_creator.sh
src/files_sort/: main.py
src/files_sort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/files_sort_afz/: main.py
