[project]
name = "files-sort"
version = "1.0.3"
authors = [
  { name="AfzGit", email="sa15@duck.com" },
]
description = "Sort files into sub-folders based on extensions, creation/modified times, and size."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AfzGit/Files-Sort-py"
Issues = "https://github.com/AfzGit/Files-Sort-py/issues"

[project.scripts]
files-sort = "files_sort.main:main"

[build-system]
requires = [
    "setuptools>=77.0.3",
    "colorama>=0.4.6"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false